--- a/views/post.ejs
+++ b/views/post.ejs
@@ -7,10 +7,22 @@
   <link rel="stylesheet" href="/poststyle.css">
 </head>
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <h1><%= post.title %></h1>
-    <p class="post-meta">Published on: <span class="post-date"><%= post.createdAt.toDateString() %></span></p>
-  </header>
+    <p class="post-meta">
+      Published on <%= post.createdAt.toDateString() %> | 
+      <span class="views"><%= post.views %> Views</span>
+    </p>  
+  </header> -->
+
+  <div class="blog-content">
+    <h1><%= post.title %></h1>
+    <p class="post-meta">
+      Published on <%= post.createdAt.toDateString() %> | 
+      <span class="views"><%= post.views %> Views</span>
+    </p>
+  </div>
+  
   <main class="content">
     <article class="c">
       <p class="post-content"><%= post.description %></p>
