--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
         <% } %>
       </ul>
     </section>
-    <a href="/new" class="new-post-btn">Create New Post</a>
+    <a href="/new" class="new-post-btn">Create New Blog</a>
   </main>
   <footer class="footer">
     <p>&copy; 2024 My Blog. All rights reserved.</p>
