--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,17 +8,19 @@
 </head>
 <body>
   <h1>Edit Post</h1>
-  <form action="/post/<%= post._id %>?_method=PUT" method="POST">
+  <form action="/edit/<%= post.slug %>?_method=PUT" method="POST">
     <div class="form-group">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title" value="<%= post.title %>" required>
     </div>
     <div class="form-group">
       <label for="description">Content:</label>
-      <textarea id="content" name="description" rows="10" required><%= post.description %></textarea>
+      <textarea id="content" name="description" rows="4" required><%= post.description %></textarea>
+      <textarea id="content" name="markdown" rows="10" required><%= post.markdown %></textarea>
+
     </div>
     <button type="submit" class="btn">Save Changes</button>
   </form>
-  <a href="/post/<%= post._id %>" class="btn">Cancel</a>
+  <a href="/<%= post.slug %>" class="btn">Cancel</a>
 </body>
 </html>
