--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,16 +11,20 @@
     <h1>Create New Post</h1>
   </header>
   <main class="content">
-    <form action="/new" method="POST" class="form">
+    <form action="/newblog" method="POST" class="form">
 
       <div class="form-group">
-        <label for="title">Post Title</label>
+        <label for="title">Blog Title</label>
         <input type="text" id="title" name="title" required>
       </div>
       
       <div class="form-group">
-        <label for="description">Post Content</label>
+        <label for="description">Blog Content</label>
         <textarea id="content" name="description" rows="10" required></textarea>
+      </div>
+      <div class="form-group">
+        <label for="markdown">Blog Content</label>
+        <textarea id="content" name="markdown" rows="10" required></textarea>
       </div>
       <button type="submit" class="btn submit-btn">Publish</button>
     </form>
