--- a/views/new.ejs
+++ b/views/new.ejs
@@ -19,7 +19,7 @@
       </div>
       
       <div class="form-group">
-        <label for="description">Blog Content</label>
+        <label for="description">Blog Description</label>
         <textarea id="content" name="description" rows="10" required></textarea>
       </div>
       <div class="form-group">
